--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
+<!--index.html-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>2D RPG Game</title>
   </head>
   <body>
-    <canvas id="canvas1"></canvas>
-
-    <script src="./assets/js/main.js"></script>
+    <canvas id="game-canvas" width="800" height="600"></canvas>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
