--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>2D RPG Game</title>
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+        background-color: #000;
+      }
+      canvas {
+        display: block;
+        margin: 0 auto;
+        background-color: #222;
+      }
+      #game-canvas {
+        border: 1px solid #fff;
+      }
+    </style>
   </head>
   <body>
     <canvas id="game-canvas" width="800" height="600"></canvas>
